# TRDL

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  __init__.py  requirements.txt
templates/: default.conf.template
tests/: output.csv
